syntax = "proto3";

option go_package = "github.com/wladimir/go-cake/cake";

package cake;

service Cake {
  rpc ListProblems(ProblemInput) returns (stream ProblemDefinition) {}

  rpc RunProblem(ProblemDefinition) returns (ProblemResult) {}
}

message ProblemInput {}

message ProblemDefinition {
  string name = 1;
}

message ProblemResult {
  string name = 1;
  string content = 2;
  string output = 3;
  int32 status = 4;
}

